Added powerup pool card in index page and fixed carousel

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <div class="decoration-line"></div>
           </div>
         </div>
+        <div class="click-me-above-trailer">Click Me!</div>
         <div class="project-carousel-container">
           <a
             href="project.html"
@@ -133,7 +134,7 @@
             style="text-decoration: none; color: inherit"
           >
             <img
-              src="https://placehold.co/400x220?text=Procedural+Generator"
+              src="Start cover.png"
               alt="Procedural Level Generator"
               style="
                 width: 100%;
@@ -141,20 +142,20 @@
                 object-fit: cover;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">Procedural Level Generator</h3>
+            <h3 style="margin-bottom: 0.5rem">PowerUp Pool</h3>
             <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              Endless, Unique Game Worlds
+              A new way to play.
             </div>
             <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">CSharp</span>
               <span class="project-tag">Unity</span>
-              <span class="project-tag">ProceduralGen</span>
-              <span class="project-tag">2024</span>
+              <span class="project-tag">Mobile</span>
+              <span class="project-tag">Arcade</span>
             </div>
             <p style="margin-bottom: 1.2rem">
-              Generate infinite, high-quality game levels on demand with
-              advanced procedural algorithms. Perfect for rapid prototyping and
-              replayability.
+              A new mobile pool game packed with wild power-ups and fast-paced
+              action. Challenge your friends, Win, and see if you have what it
+              takes to become the a pool champion! Currently in development get
+              ready to break the rules and the rack!
             </p>
           </a>
           <a
