fixed pool image

--- a/project.html
+++ b/project.html
@@ -344,7 +344,7 @@
         {
           id: "1",
           title: "Procedural Level Generator",
-          img: "project1.jpg",
+          img: "Start Cover.png",
           video: "demo1.mp4",
           desc: "A tool for generating unique game levels algorithmically, enabling rapid prototyping and endless replayability.",
           features: [
