--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             style="text-decoration: none; color: inherit"
           >
             <img
-              src="Start cover.png"
+              src="Start Cover.png"
               alt="Procedural Level Generator"
               style="
                 width: 100%;
