fixed featured section + added some vid to projects section

--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
             <div class="decoration-line"></div>
           </div>
         </div>
-        <div class="click-me-above-trailer">Click Me!</div>
         <div class="project-carousel-container">
           <a
             href="project.html"
@@ -164,28 +163,28 @@
             style="text-decoration: none; color: inherit"
           >
             <img
-              src="https://placehold.co/400x220?text=AI+Behavior+Toolkit"
-              alt="AI Behavior Toolkit"
+              src="tls.png"
+              alt="Korosu: The Last Stand"
               style="
                 width: 100%;
+                height: 220px;
                 border-radius: 1rem 1rem 0 0;
                 object-fit: cover;
+                object-position: center 8%;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">AI Behavior Toolkit</h3>
+            <h3 style="margin-bottom: 0.5rem">Korosu: The Last Stand</h3>
             <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              Smarter, Adaptive NPCs
+              Third person, Tower Defence.
             </div>
             <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">CPlusPlus</span>
-              <span class="project-tag">UnrealEngine5</span>
-              <span class="project-tag">AI</span>
-              <span class="project-tag">BehaviorTrees</span>
+              <span class="project-tag">UE5</span>
+              <span class="project-tag">Windows</span>
+              <span class="project-tag">Blueprints</span>
             </div>
             <p style="margin-bottom: 1.2rem">
-              Empower your games with modular AI: drag-and-drop behavior trees,
-              real-time debugging, and seamless engine integration for next-gen
-              NPCs.
+              A third-person tower defence game set in 15th century Japan.
+              Defend your village against enemy clans in strategic gameplay.
             </p>
           </a>
           <a
@@ -194,28 +193,28 @@
             style="text-decoration: none; color: inherit"
           >
             <img
-              src="https://placehold.co/400x220?text=Visual+Scripting"
+              src="unreal.png"
               alt="Visual Scripting System"
               style="
                 width: 100%;
+                height: 220px;
                 border-radius: 1rem 1rem 0 0;
                 object-fit: cover;
+                object-position: center 20%;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">Visual Scripting System</h3>
+            <h3 style="margin-bottom: 0.5rem">Custom Unreal Tool</h3>
             <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              No-Code Game Logic
+              Generate SVG files into 3D meshes.
             </div>
             <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">TypeScript</span>
-              <span class="project-tag">Electron</span>
-              <span class="project-tag">NodeEditor</span>
-              <span class="project-tag">UXUI</span>
+              <span class="project-tag">UE5</span>
+              <span class="project-tag">C++</span>
             </div>
             <p style="margin-bottom: 1.2rem">
-              Design complex interactions visually. Node-based editor, live
-              debugging, and instant engine sync—empowering designers and
-              speeding up workflows.
+              A custom tool in Unreal Engine that converts simple SVG files into
+              3D static meshes. Perfect for procedural generation workflows and
+              vector-based design input.
             </p>
           </a>
           <a
@@ -224,28 +223,29 @@
             style="text-decoration: none; color: inherit"
           >
             <img
-              src="https://placehold.co/400x220?text=Physics+Sandbox"
+              src="arduino.jpg"
               alt="Physics Sandbox"
               style="
                 width: 100%;
+                height: 220px;
                 border-radius: 1rem 1rem 0 0;
                 object-fit: cover;
+                object-position: center 8%;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">Physics Sandbox</h3>
+            <h3 style="margin-bottom: 0.5rem">Steamboat Frenzy</h3>
             <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              Interactive Real-Time Simulation
+              Interactive 2 Player game.
             </div>
             <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">CPlusPlus</span>
-              <span class="project-tag">WebAssembly</span>
-              <span class="project-tag">GPUPhysics</span>
-              <span class="project-tag">2024</span>
+              <span class="project-tag">Unity</span>
+              <span class="project-tag">Arduino</span>
+              <span class="project-tag">C#</span>
             </div>
             <p style="margin-bottom: 1.2rem">
-              Experiment with realistic physics in a playful sandbox. Drag,
-              drop, and collide objects with GPU-accelerated performance and
-              intuitive controls.
+              This project uses a custom controller built with Arduino and a
+              game developed in Unity. Experience interactive gameplay designed
+              for two players with unique hardware integration.
             </p>
           </a>
         </div>
