--- a/index.html
+++ b/index.html
@@ -137,25 +137,29 @@
               alt="Procedural Level Generator"
               style="
                 width: 100%;
+                height: 280px;
                 border-radius: 1rem 1rem 0 0;
                 object-fit: cover;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">PowerUp Pool</h3>
-            <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              A new way to play.
+            <div style="padding: 1.5rem">
+              <h3 style="margin-bottom: 0.5rem">PowerUp Pool</h3>
+              <div class="project-subtitle" style="margin-bottom: 0.7rem">
+                A new way to play.
+              </div>
+              <div class="project-tags" style="margin-bottom: 1.1rem">
+                <span class="project-tag">Unity</span>
+                <span class="project-tag">Mobile</span>
+                <span class="project-tag">Arcade</span>
+              </div>
+              <p style="margin-bottom: 1.2rem">
+                A new mobile pool game packed with wild power-ups and fast-paced
+                action. Challenge your friends, Win, and see if you have what it
+                takes to become the a pool champion! Currently in development
+                get ready to break the rules and the rack! Keep an eye out for
+                updates on LinkedIn!
+              </p>
             </div>
-            <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">Unity</span>
-              <span class="project-tag">Mobile</span>
-              <span class="project-tag">Arcade</span>
-            </div>
-            <p style="margin-bottom: 1.2rem">
-              A new mobile pool game packed with wild power-ups and fast-paced
-              action. Challenge your friends, Win, and see if you have what it
-              takes to become the a pool champion! Currently in development get
-              ready to break the rules and the rack!
-            </p>
           </a>
           <a
             href="project.html"
@@ -167,25 +171,83 @@
               alt="Korosu: The Last Stand"
               style="
                 width: 100%;
-                height: 220px;
+                height: 280px;
                 border-radius: 1rem 1rem 0 0;
                 object-fit: cover;
                 object-position: center 8%;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">Korosu: The Last Stand</h3>
-            <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              Third person, Tower Defence.
+            <div
+              class="project-image-gallery"
+              style="
+                padding: 1rem;
+                background: var(--card-bg);
+                border-bottom: 1px solid var(--border);
+              "
+            >
+              <div
+                class="gallery-scroll"
+                style="
+                  display: flex;
+                  gap: 0.5rem;
+                  overflow-x: auto;
+                  padding-bottom: 0.5rem;
+                  scrollbar-width: none;
+                "
+              >
+                <img
+                  src="k1.png"
+                  alt="Korosu Screenshot 1"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+                <img
+                  src="k2.png"
+                  alt="Korosu Screenshot 2"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+                <img
+                  src="k3.png"
+                  alt="Korosu Screenshot 3"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+              </div>
             </div>
-            <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">UE5</span>
-              <span class="project-tag">Windows</span>
-              <span class="project-tag">Blueprints</span>
+            <div style="padding: 1.5rem">
+              <h3 style="margin-bottom: 0.5rem">Korosu: The Last Stand</h3>
+              <div class="project-subtitle" style="margin-bottom: 0.7rem">
+                Third person, Tower Defence.
+              </div>
+              <div class="project-tags" style="margin-bottom: 1.1rem">
+                <span class="project-tag">UE5</span>
+                <span class="project-tag">Windows</span>
+                <span class="project-tag">Blueprints</span>
+              </div>
+              <p style="margin-bottom: 1.2rem">
+                A third-person tower defence game set in 15th century Japan.
+                Defend your village against enemy clans in strategic gameplay.
+              </p>
             </div>
-            <p style="margin-bottom: 1.2rem">
-              A third-person tower defence game set in 15th century Japan.
-              Defend your village against enemy clans in strategic gameplay.
-            </p>
           </a>
           <a
             href="project.html"
@@ -197,25 +259,83 @@
               alt="Visual Scripting System"
               style="
                 width: 100%;
-                height: 220px;
+                height: 280px;
                 border-radius: 1rem 1rem 0 0;
                 object-fit: cover;
                 object-position: center 20%;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">Custom Unreal Tool</h3>
-            <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              Generate SVG files into 3D meshes.
+            <div
+              class="project-image-gallery"
+              style="
+                padding: 1rem;
+                background: var(--card-bg);
+                border-bottom: 1px solid var(--border);
+              "
+            >
+              <div
+                class="gallery-scroll"
+                style="
+                  display: flex;
+                  gap: 0.5rem;
+                  overflow-x: auto;
+                  padding-bottom: 0.5rem;
+                  scrollbar-width: none;
+                "
+              >
+                <img
+                  src="u1.png"
+                  alt="Custom Unreal Tool Screenshot 1"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+                <img
+                  src="u2.png"
+                  alt="Custom Unreal Tool Screenshot 2"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+                <img
+                  src="u3.png"
+                  alt="Custom Unreal Tool Screenshot 3"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+              </div>
             </div>
-            <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">UE5</span>
-              <span class="project-tag">C++</span>
+            <div style="padding: 1.5rem">
+              <h3 style="margin-bottom: 0.5rem">Custom Unreal Tool</h3>
+              <div class="project-subtitle" style="margin-bottom: 0.7rem">
+                Generate SVG files into 3D meshes.
+              </div>
+              <div class="project-tags" style="margin-bottom: 1.1rem">
+                <span class="project-tag">UE5</span>
+                <span class="project-tag">C++</span>
+              </div>
+              <p style="margin-bottom: 1.2rem">
+                A custom tool in Unreal Engine that converts simple SVG files
+                into 3D static meshes. Perfect for procedural generation
+                workflows and vector-based design input.
+              </p>
             </div>
-            <p style="margin-bottom: 1.2rem">
-              A custom tool in Unreal Engine that converts simple SVG files into
-              3D static meshes. Perfect for procedural generation workflows and
-              vector-based design input.
-            </p>
           </a>
           <a
             href="project.html"
@@ -227,26 +347,84 @@
               alt="Physics Sandbox"
               style="
                 width: 100%;
-                height: 220px;
+                height: 280px;
                 border-radius: 1rem 1rem 0 0;
                 object-fit: cover;
                 object-position: center 8%;
               "
             />
-            <h3 style="margin-bottom: 0.5rem">Steamboat Frenzy</h3>
-            <div class="project-subtitle" style="margin-bottom: 0.7rem">
-              Interactive 2 Player game.
+            <div
+              class="project-image-gallery"
+              style="
+                padding: 1rem;
+                background: var(--card-bg);
+                border-bottom: 1px solid var(--border);
+              "
+            >
+              <div
+                class="gallery-scroll"
+                style="
+                  display: flex;
+                  gap: 0.5rem;
+                  overflow-x: auto;
+                  padding-bottom: 0.5rem;
+                  scrollbar-width: none;
+                "
+              >
+                <img
+                  src="a1.png"
+                  alt="Steamboat Frenzy Screenshot 1"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+                <img
+                  src="a2.png"
+                  alt="Steamboat Frenzy Screenshot 2"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+                <img
+                  src="a3.png"
+                  alt="Steamboat Frenzy Screenshot 3"
+                  style="
+                    width: 80px;
+                    height: 60px;
+                    object-fit: cover;
+                    border-radius: 0.5rem;
+                    flex-shrink: 0;
+                    border: 1px solid var(--border);
+                  "
+                />
+              </div>
             </div>
-            <div class="project-tags" style="margin-bottom: 1.1rem">
-              <span class="project-tag">Unity</span>
-              <span class="project-tag">Arduino</span>
-              <span class="project-tag">C#</span>
+            <div style="padding: 1.5rem">
+              <h3 style="margin-bottom: 0.5rem">Steamboat Frenzy</h3>
+              <div class="project-subtitle" style="margin-bottom: 0.7rem">
+                Interactive 2 Player game.
+              </div>
+              <div class="project-tags" style="margin-bottom: 1.1rem">
+                <span class="project-tag">Unity</span>
+                <span class="project-tag">Arduino</span>
+                <span class="project-tag">C#</span>
+              </div>
+              <p style="margin-bottom: 1.2rem">
+                This project uses a custom controller built with Arduino and a
+                game developed in Unity. Experience interactive gameplay
+                designed for two players with unique hardware integration.
+              </p>
             </div>
-            <p style="margin-bottom: 1.2rem">
-              This project uses a custom controller built with Arduino and a
-              game developed in Unity. Experience interactive gameplay designed
-              for two players with unique hardware integration.
-            </p>
           </a>
         </div>
         <div class="carousel-dots">
@@ -315,5 +493,213 @@
     </footer>
     <script src="script.js"></script>
     <script src="dino-game.js"></script>
+
+    <!-- Image Gallery Modal -->
+    <div
+      id="imageModal"
+      style="
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        z-index: 1000;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <div
+        style="
+          position: relative;
+          max-width: 90%;
+          max-height: 90%;
+          text-align: center;
+        "
+      >
+        <button
+          id="closeModal"
+          style="
+            position: absolute;
+            top: -40px;
+            right: 0;
+            background: none;
+            border: none;
+            color: white;
+            font-size: 2rem;
+            cursor: pointer;
+            z-index: 1001;
+          "
+        >
+          ×
+        </button>
+        <button
+          id="prevImage"
+          style="
+            position: absolute;
+            left: -60px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: none;
+            border: none;
+            color: white;
+            font-size: 2rem;
+            cursor: pointer;
+            z-index: 1001;
+          "
+        >
+          ‹
+        </button>
+        <button
+          id="nextImage"
+          style="
+            position: absolute;
+            right: -60px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: none;
+            border: none;
+            color: white;
+            font-size: 2rem;
+            cursor: pointer;
+            z-index: 1001;
+          "
+        >
+          ›
+        </button>
+        <div
+          id="modalImageContainer"
+          style="display: flex; justify-content: center; align-items: center"
+        >
+          <img
+            id="modalImage"
+            style="
+              max-width: 100%;
+              max-height: 80vh;
+              object-fit: contain;
+              border-radius: 0.5rem;
+            "
+          />
+        </div>
+        <div
+          id="imageCounter"
+          style="color: white; margin-top: 1rem; font-size: 1.1rem"
+        ></div>
+      </div>
+    </div>
+
+    <script>
+      // Image gallery data for each project
+      const projectGalleries = {
+        "PowerUp Pool": [
+          "Start Cover.png",
+          "Start Cover.png",
+          "Start Cover.png",
+        ],
+        "Korosu: The Last Stand": ["k1.png", "k2.png", "k3.png"],
+        "Custom Unreal Tool": ["u1.png", "u2.png", "u3.png"],
+        "Steamboat Frenzy": ["a1.png", "a2.png", "a3.png"],
+      };
+
+      let currentImageIndex = 0;
+      let currentImages = [];
+
+      // Add click handlers to gallery images
+      document.addEventListener("DOMContentLoaded", function () {
+        const galleryImages = document.querySelectorAll(".gallery-scroll img");
+        const modal = document.getElementById("imageModal");
+        const modalImage = document.getElementById("modalImage");
+        const imageCounter = document.getElementById("imageCounter");
+        const closeModal = document.getElementById("closeModal");
+        const prevImage = document.getElementById("prevImage");
+        const nextImage = document.getElementById("nextImage");
+
+        galleryImages.forEach((img) => {
+          img.style.cursor = "pointer";
+          img.addEventListener("click", function (e) {
+            e.preventDefault();
+            e.stopPropagation();
+
+            // Find which project this image belongs to
+            const projectCard = img.closest(".project-carousel-card");
+            const projectTitle = projectCard.querySelector("h3").textContent;
+            currentImages = projectGalleries[projectTitle];
+
+            // Find which image was clicked
+            const clickedSrc = img.src.split("/").pop();
+            currentImageIndex = currentImages.indexOf(clickedSrc);
+            if (currentImageIndex === -1) currentImageIndex = 0;
+
+            // Show first image
+            showImage(currentImageIndex);
+            modal.style.display = "flex";
+          });
+        });
+
+        function showImage(index) {
+          if (currentImages.length === 0) return;
+
+          currentImageIndex = index;
+          modalImage.src = currentImages[currentImageIndex];
+          imageCounter.textContent = `${currentImageIndex + 1} / ${
+            currentImages.length
+          }`;
+
+          // Show/hide navigation arrows
+          prevImage.style.display = currentImageIndex > 0 ? "block" : "none";
+          nextImage.style.display =
+            currentImageIndex < currentImages.length - 1 ? "block" : "none";
+        }
+
+        // Navigation functionality
+        prevImage.addEventListener("click", function () {
+          if (currentImageIndex > 0) {
+            showImage(currentImageIndex - 1);
+          }
+        });
+
+        nextImage.addEventListener("click", function () {
+          if (currentImageIndex < currentImages.length - 1) {
+            showImage(currentImageIndex + 1);
+          }
+        });
+
+        // Keyboard navigation
+        document.addEventListener("keydown", function (e) {
+          if (modal.style.display === "flex") {
+            if (e.key === "Escape") {
+              modal.style.display = "none";
+            } else if (e.key === "ArrowLeft" && currentImageIndex > 0) {
+              showImage(currentImageIndex - 1);
+            } else if (
+              e.key === "ArrowRight" &&
+              currentImageIndex < currentImages.length - 1
+            ) {
+              showImage(currentImageIndex + 1);
+            }
+          }
+        });
+
+        // Close modal functionality
+        closeModal.addEventListener("click", function () {
+          modal.style.display = "none";
+        });
+
+        // Close modal when clicking outside
+        modal.addEventListener("click", function (e) {
+          if (e.target === modal) {
+            modal.style.display = "none";
+          }
+        });
+      });
+    </script>
+    <style>
+      @media (max-width: 600px) {
+        .carousel-dots {
+          display: none !important;
+        }
+      }
+    </style>
   </body>
 </html>
