--- a/project.html
+++ b/project.html
@@ -360,12 +360,13 @@
           title: "PowerUp Pool",
           img: "Start Cover.png",
           video: "demo1.mp4",
-          desc: "A new mobile pool game packed with wild power-ups and fast-paced action. Challenge your friends, Win, and see if you have what it takes to become the a pool champion! Currently in development get ready to break the rules and the rack!",
+          desc: "A new mobile pool game packed with wild power-ups and fast-paced action. Challenge your friends, Win, and see if you have what it takes to become the a pool champion! Currently in development get ready to break the rules and the rack! This is a project that I am currently working on brought to you by Matchup Games. As a junior developer, I’m responsible for the technical design, UI integration, bug testing, audio implementation, and overall game development. The project is still in active development, with a focus on delivering a polished and exciting multiplayer experience.",
           features: [
             "Unity development",
             "Mobile platform",
-            "Arcade gameplay",
-            "Power-up mechanics",
+            "Firebase",
+            "Technical Design",
+            "Wwsie",
           ],
         },
         {
@@ -373,7 +374,7 @@
           title: "Korosu: The Last Stand",
           img: "tls.png",
           video: "KDemo.mp4",
-          desc: "A third-person tower defence game set in 15th century Japan. Defend your village against enemy clans in strategic gameplay.",
+          desc: "A third-person tower defence game set in 15th century Japan. Defend your village against enemy clans in strategic gameplay. Inspired by Ghost of Tsushima, this was my first game designed and developed individually. I learned a lot about the process of game design and development and how to use the Unreal Engine to create a game. This was also my first time working with blueprints and visual scripting.",
           features: [
             "UE5 development",
             "Windows platform",
@@ -386,7 +387,7 @@
           title: "Custom Unreal Tool",
           img: "unreal.png",
           video: "demo3.mp4",
-          desc: "A custom tool in Unreal Engine that converts simple SVG files into 3D static meshes. Perfect for procedural generation workflows and vector-based design input.",
+          desc: "A custom tool in Unreal Engine that converts simple SVG files into 3D static meshes. Perfect for procedural generation workflows and vector-based design input. This was my first project in Unreal where I attempted to create a tool that would be useful for not only developers but also artists. Although, the tool is simple and can only handle a few shapes, I learned a lot about the engine and the process of creating a tool. It can deffinitely be expanded upon in the future to create a much more complex tool.",
           features: [
             "UE5 integration",
             "C++ development",
@@ -399,7 +400,7 @@
           title: "Steamboat Frenzy",
           img: "arduino.jpg",
           video: "ArduinoPortflio.mp4",
-          desc: "This project uses a custom controller built with Arduino and a game developed in Unity. Experience interactive gameplay designed for two players with unique hardware integration.",
+          desc: "Steamboat Frenzy is a solo-developed interactive project combining Unity with custom Arduino hardware. Originally conceived during a 3-day hackathon centered on the theme “Bizarro,” this project challenged me to rapidly prototype and iterate under pressure. Throughout development, I gained hands-on experience integrating microcontrollers into a Unity environment, and strengthened my ability to solve complex technical problems—ranging from simulating realistic rotation to ensuring smooth mechanical interactions with gameplay. The experience also sharpened my ability to quickly turn abstract ideas into functional, engaging experiences.",
           features: [
             "Unity development",
             "Arduino integration",
