--- a/index.html
+++ b/index.html
@@ -498,39 +498,64 @@
     <div
       id="imageModal"
       style="
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.9);
-        z-index: 1000;
-        justify-content: center;
-        align-items: center;
+        display: none !important;
+        position: fixed !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100% !important;
+        height: 100% !important;
+        z-index: 1000 !important;
+        pointer-events: none !important;
+        background: none !important;
+        align-items: unset !important;
+        justify-content: unset !important;
+        max-width: none !important;
+        max-height: none !important;
+        border-radius: 0 !important;
+        box-shadow: none !important;
+        overflow: visible !important;
       "
     >
       <div
         style="
-          position: relative;
-          max-width: 90%;
-          max-height: 90%;
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
           text-align: center;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          background: rgba(0, 0, 0, 0.9);
+          border-radius: 1rem;
+          padding: 2rem;
+          box-shadow: 0 10px 40px rgba(0, 0, 0, 0.8);
+          pointer-events: auto;
         "
       >
         <button
           id="closeModal"
           style="
             position: absolute;
-            top: -40px;
-            right: 0;
-            background: none;
+            top: 10px;
+            right: 10px;
+            background: rgba(0, 0, 0, 0.7);
             border: none;
             color: white;
-            font-size: 2rem;
+            font-size: 1.8rem;
             cursor: pointer;
             z-index: 1001;
+            width: 35px;
+            height: 35px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            transition: background-color 0.2s;
           "
+          onmouseover="this.style.backgroundColor='rgba(0,0,0,0.9)'"
+          onmouseout="this.style.backgroundColor='rgba(0,0,0,0.7)'"
         >
           ×
         </button>
@@ -538,16 +563,26 @@
           id="prevImage"
           style="
             position: absolute;
-            left: -60px;
+            left: -70px;
             top: 50%;
             transform: translateY(-50%);
-            background: none;
+            background: rgba(255, 255, 255, 0.15);
             border: none;
             color: white;
             font-size: 2rem;
             cursor: pointer;
             z-index: 1001;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 0.2s;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
           "
+          onmouseover="this.style.backgroundColor='rgba(255,255,255,0.25)'"
+          onmouseout="this.style.backgroundColor='rgba(255,255,255,0.15)'"
         >
           ‹
         </button>
@@ -555,36 +590,63 @@
           id="nextImage"
           style="
             position: absolute;
-            right: -60px;
+            right: -70px;
             top: 50%;
             transform: translateY(-50%);
-            background: none;
+            background: rgba(255, 255, 255, 0.15);
             border: none;
             color: white;
             font-size: 2rem;
             cursor: pointer;
             z-index: 1001;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 0.2s;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
           "
+          onmouseover="this.style.backgroundColor='rgba(255,255,255,0.25)'"
+          onmouseout="this.style.backgroundColor='rgba(255,255,255,0.15)'"
         >
           ›
         </button>
         <div
           id="modalImageContainer"
-          style="display: flex; justify-content: center; align-items: center"
+          style="
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+          "
         >
           <img
             id="modalImage"
             style="
               max-width: 100%;
-              max-height: 80vh;
+              max-height: 100%;
               object-fit: contain;
-              border-radius: 0.5rem;
+              border-radius: 0.8rem;
+              box-shadow: 0 8px 32px rgba(0, 0, 0, 0.6);
             "
           />
         </div>
         <div
           id="imageCounter"
-          style="color: white; margin-top: 1rem; font-size: 1.1rem"
+          style="
+            color: white;
+            margin-top: 2rem;
+            font-size: 1.1rem;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 0.6rem 1.2rem;
+            border-radius: 25px;
+            font-weight: 500;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+          "
         ></div>
       </div>
     </div>
@@ -692,12 +754,91 @@
             modal.style.display = "none";
           }
         });
+
+        // Also close when clicking on the background overlay
+        document.addEventListener("click", function (e) {
+          if (
+            modal.style.display === "flex" &&
+            e.target.id !== "modalImage" &&
+            e.target.id !== "prevImage" &&
+            e.target.id !== "nextImage" &&
+            e.target.id !== "closeModal" &&
+            e.target.id !== "imageCounter" &&
+            !e.target.closest("#imageModal > div")
+          ) {
+            modal.style.display = "none";
+          }
+        });
       });
     </script>
     <style>
       @media (max-width: 600px) {
         .carousel-dots {
           display: none !important;
+        }
+
+        /* Mobile modal improvements */
+        #imageModal > div {
+          padding: 1.5rem !important;
+        }
+
+        #prevImage {
+          left: -50px !important;
+          width: 40px !important;
+          height: 40px !important;
+          font-size: 1.6rem !important;
+        }
+
+        #nextImage {
+          right: -50px !important;
+          width: 40px !important;
+          height: 40px !important;
+          font-size: 1.6rem !important;
+        }
+
+        #imageCounter {
+          font-size: 0.9rem !important;
+          padding: 0.4rem 0.8rem !important;
+        }
+      }
+
+      @media (max-width: 480px) {
+        #imageModal > div {
+          padding: 1.2rem !important;
+        }
+
+        #prevImage {
+          left: -45px !important;
+          width: 35px !important;
+          height: 35px !important;
+          font-size: 1.4rem !important;
+        }
+
+        #nextImage {
+          right: -45px !important;
+          width: 35px !important;
+          height: 35px !important;
+          font-size: 1.4rem !important;
+        }
+      }
+
+      @media (max-width: 360px) {
+        #imageModal > div {
+          padding: 1rem !important;
+        }
+
+        #prevImage {
+          left: -40px !important;
+          width: 30px !important;
+          height: 30px !important;
+          font-size: 1.2rem !important;
+        }
+
+        #nextImage {
+          right: -40px !important;
+          width: 30px !important;
+          height: 30px !important;
+          font-size: 1.2rem !important;
         }
       }
     </style>
