--- a/index.html
+++ b/index.html
@@ -580,6 +580,8 @@
             justify-content: center;
             transition: background-color 0.2s;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            line-height: 1;
+            padding: 0;
           "
           onmouseover="this.style.backgroundColor='rgba(255,255,255,0.25)'"
           onmouseout="this.style.backgroundColor='rgba(255,255,255,0.15)'"
@@ -607,6 +609,8 @@
             justify-content: center;
             transition: background-color 0.2s;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            line-height: 1;
+            padding: 0;
           "
           onmouseover="this.style.backgroundColor='rgba(255,255,255,0.25)'"
           onmouseout="this.style.backgroundColor='rgba(255,255,255,0.15)'"
@@ -783,14 +787,14 @@
         }
 
         #prevImage {
-          left: -50px !important;
+          left: 10px !important;
           width: 40px !important;
           height: 40px !important;
           font-size: 1.6rem !important;
         }
 
         #nextImage {
-          right: -50px !important;
+          right: 10px !important;
           width: 40px !important;
           height: 40px !important;
           font-size: 1.6rem !important;
@@ -808,14 +812,14 @@
         }
 
         #prevImage {
-          left: -45px !important;
+          left: 8px !important;
           width: 35px !important;
           height: 35px !important;
           font-size: 1.4rem !important;
         }
 
         #nextImage {
-          right: -45px !important;
+          right: 8px !important;
           width: 35px !important;
           height: 35px !important;
           font-size: 1.4rem !important;
@@ -828,14 +832,14 @@
         }
 
         #prevImage {
-          left: -40px !important;
+          left: 5px !important;
           width: 30px !important;
           height: 30px !important;
           font-size: 1.2rem !important;
         }
 
         #nextImage {
-          right: -40px !important;
+          right: 5px !important;
           width: 30px !important;
           height: 30px !important;
           font-size: 1.2rem !important;
